# mwrd-connect

./: .env  .env.local.bak  .gitignore  .pre-commit-config.yaml  README.md  index.html  netlify.toml  package-lock.json  package.json  skills-lock.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/apps/accounts/: admin.py  apps.py  authentication.py  managers.py  models.py  schema_extensions.py  serializers.py  urls.py
backend/apps/approvals/: models.py  services.py  urls.py  views.py
backend/apps/audit/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/catalog/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/comments/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/contracts/: apps.py  models.py  urls.py  (+3 more)
backend/config/: celery.py  urls.py
backend/deploy/: README.md  docker-compose.prod.yml
backend/loadtest/: README.md  k6.js
backend/scripts/: backup_postgres.sh  restore_postgres.sh
backend/tests/: conftest.py  test_anonymity.py  test_approval_tree.py  test_auth_flow.py  test_auto_quote_engine.py  test_catalog_api.py  test_catalog_seed.py  test_catalog_service.py  test_custom_request_rfq.py  test_document_numbering.py  test_dual_po.py  test_email_tasks.py  test_kyc_flow.py  test_lead_pipeline.py  test_margin_engine.py  test_moyasar_stub.py  test_offer_alignment.py  test_org_lifecycle.py  test_phase5_flow.py  test_phase6_crosscutting.py  test_phase7_integrations.py  test_phase8_dataops.py  test_rfq_to_order_flow.py  test_shopping.py  test_split_award.py  test_team_invite.py  test_tenant_scoping.py  test_three_way_match.py
(+430 files in other folders)
